# duckdb_project

./: Dockerfile  README.md  diferentes_arquivos.py  duckdb.db  pipeline_00.py  pipeline_02.py  pyproject.toml
data/: vendas_05_01_2024.parquet  vendas_06_01_2024.parquet
